--- a/module/config/i18n/ja-JP.json
+++ b/module/config/i18n/ja-JP.json
@@ -2501,7 +2501,7 @@
   "GGHandler": {
     "_info": {
       "name": "GG管理器",
-      "help": "将GG悬浮窗遮挡住石油图标（请将透明度调至90%以上）"
+      "help": "请在旧版UI中将GG悬浮窗遮挡住石油图标（透明度调至90%以上）"
     },
     "Enable": {
       "name": "启用倍率",
