--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2106,7 +2106,7 @@
   "Hard": {
     "_info": {
       "name": "困難圖",
-      "help": "執行每日困難圖默認為解鎖周回模式，未解鎖前回退到傳統出擊"
+      "help": "執行每日困難圖需要解鎖周回模式，未解鎖前則使用主線圖功能"
     },
     "HardStage": {
       "name": "困難地圖",
