--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -1167,6 +1167,20 @@
     "CommissionLimit": {
       "name": "防止紧急委托数量过多",
       "help": "在7x24运行时防止紧急委托数量过多做不完每日委托，建议在委托过滤器仅选择短时长高收益委托"
+    },
+    "HardVanguardIndex": {
+      "name": "困难模式驱逐位置",
+      "help": "",
+      "0": "0",
+      "1": "1",
+      "2": "2"
+    },
+    "HardFlagshipIndex": {
+      "name": "困难模式轻航位置",
+      "help": "",
+      "0": "0",
+      "1": "1",
+      "2": "2"
     }
   },
   "CampaignStorage": {
