--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -1169,8 +1169,8 @@
       "z20_or_z21": "Z20或Z21"
     },
     "CommissionLimit": {
-      "name": "防止紧急委托数量过多",
-      "help": "在7x24运行时防止紧急委托数量过多做不完每日委托，建议在委托过滤器仅选择短时长高收益委托"
+      "name": "提高紧急委托优先级",
+      "help": "没有防止紧急委托数量过多了！！！\n将紧急委托的优先级提前至侵蚀1前，小开注意设置油限制以及推荐紧急委托开启中路站桩模式"
     },
     "HardVanguardIndex": {
       "name": "困难模式驱逐位置",
