多次重启尝试再报错，直接抄了oxcc的代码

--- a/module/config/i18n/zh-CN.json
+++ b/module/config/i18n/zh-CN.json
@@ -2768,6 +2768,46 @@
       "help": "游戏被强制结束后自动登录游戏"
     }
   },
+  "AutoRestart": {
+    "_info": {
+      "name": "自动重启",
+      "help": "遇到某些问题时自动重启"
+    },
+    "Enabled": {
+      "name": "启用",
+      "help": ""
+    },
+    "AttemptsToRestart": {
+      "name": "最大尝试自动重启次数",
+      "help": ""
+    },
+    "NotifyWhenAutoRestart": {
+      "name": "重启时通知",
+      "help": "因出错而自动重启时通知，不建议开启，因为可能会很烦"
+    }
+  },
+  "InstanceRestart": {
+    "_info": {
+      "name": "重启Alas实例",
+      "help": ""
+    },
+    "Enabled": {
+      "name": "启用",
+      "help": ""
+    },
+    "AttemptsToRestart": {
+      "name": "最大尝试自动重启次数",
+      "help": ""
+    },
+    "NotifyWhenAutoRestart": {
+      "name": "重启时通知",
+      "help": "因出错而自动重启时通知，不建议开启，因为可能会很烦"
+    },
+    "HasRestarted": {
+      "name": "InstanceRestart.HasRestarted.name",
+      "help": "InstanceRestart.HasRestarted.help"
+    }
+  },
   "GGHandler": {
     "_info": {
       "name": "GG管理器",
