--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2509,6 +2509,16 @@
       "help": "僅出擊指定的海域，可以用來獲取大世界成就星星\n自動更新的數值，填0可重置進度，重置後自動跳過已開荒的海域\n支援海域ID、國服/國際服/日服/台服海域名稱，例如 \"51\", \"NA海域東南E\", \"NA Ocean SE Sector E\"\n填入默認值0，或者刪除數值即可取消指定"
     }
   },
+  "HigherPriority": {
+    "_info": {
+      "name": "更高优先级",
+      "help": "开启后会将优先级调整到紧急委托前面"
+    },
+    "Enable": {
+      "name": "启用",
+      "help": ""
+    }
+  },
   "OpsiHazard1Leveling": {
     "_info": {
       "name": "侵蝕1練級",
