大世界中路站桩

--- a/module/config/i18n/zh-TW.json
+++ b/module/config/i18n/zh-TW.json
@@ -2550,6 +2550,14 @@
       "3": "3",
       "4": "4"
     },
+    "FleetMode": {
+      "name": "自律模式",
+      "help": "",
+      "combat_auto": "自律战斗",
+      "combat_manual": "手操",
+      "stand_still_in_the_middle": "中路站桩",
+      "hide_in_bottom_left": "躲左下角"
+    },
     "Submarine": {
       "name": "呼叫潛艇",
       "help": "開啟後，運行間隔將增加至60分鐘"
